--- a/goSellSDK/UI/Resources/PayButtonUI.xib
+++ b/goSellSDK/UI/Resources/PayButtonUI.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PayButtonUI" customModule="goSellSDK">
             <connections>
                 <outlet property="internalButton" destination="lvG-Io-jsH" id="gF6-te-tb7"/>
+                <outlet property="internalButtonContainerView" destination="R2Q-JK-MjG" id="jK8-v8-uyg"/>
                 <outlet property="loader" destination="U9w-fM-nx4" id="KNp-qY-8sq"/>
                 <outlet property="securityButton" destination="x1F-hy-quL" id="nPz-Kr-YLX"/>
             </connections>
@@ -22,13 +23,37 @@
             <rect key="frame" x="0.0" y="0.0" width="359" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lvG-Io-jsH">
-                    <rect key="frame" x="0.0" y="0.0" width="359" height="44"/>
-                    <state key="normal" title="PAY"/>
-                    <connections>
-                        <action selector="internalButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="Ezj-m8-OZs"/>
-                    </connections>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R2Q-JK-MjG">
+                    <rect key="frame" x="0.0" y="0.0" width="315" height="44"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lvG-Io-jsH">
+                            <rect key="frame" x="0.0" y="0.0" width="359" height="44"/>
+                            <state key="normal" title="PAY"/>
+                            <connections>
+                                <action selector="internalButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="Ezj-m8-OZs"/>
+                            </connections>
+                        </button>
+                        <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9w-fM-nx4" customClass="TapActivityIndicatorView" customModule="TapGLKit">
+                            <rect key="frame" x="7" y="7" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="U9w-fM-nx4" secondAttribute="height" id="59U-2d-oX0"/>
+                                <constraint firstAttribute="height" constant="30" id="Kw9-uF-RlE"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAnimating" value="NO"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="hidesWhenStopped" value="NO"/>
+                            </userDefinedRuntimeAttributes>
+                        </glkView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="lvG-Io-jsH" firstAttribute="top" secondItem="R2Q-JK-MjG" secondAttribute="top" id="IUU-ZK-cVY"/>
+                        <constraint firstAttribute="bottom" secondItem="lvG-Io-jsH" secondAttribute="bottom" id="SV2-ST-sle"/>
+                        <constraint firstItem="U9w-fM-nx4" firstAttribute="centerY" secondItem="R2Q-JK-MjG" secondAttribute="centerY" id="bjl-an-6VV"/>
+                        <constraint firstItem="lvG-Io-jsH" firstAttribute="leading" secondItem="R2Q-JK-MjG" secondAttribute="leading" id="mqm-58-fWJ"/>
+                        <constraint firstItem="U9w-fM-nx4" firstAttribute="leading" secondItem="R2Q-JK-MjG" secondAttribute="leading" constant="7" id="s4p-1B-zSp"/>
+                    </constraints>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1F-hy-quL">
                     <rect key="frame" x="315" y="0.0" width="44" height="44"/>
                     <color key="backgroundColor" red="0.36238234487775378" green="0.67995262837185355" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -39,29 +64,17 @@
                         <action selector="securityButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="0Gv-On-6jM"/>
                     </connections>
                 </button>
-                <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9w-fM-nx4" customClass="TapActivityIndicatorView" customModule="TapGLKit">
-                    <rect key="frame" x="7" y="7" width="30" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="U9w-fM-nx4" secondAttribute="height" id="59U-2d-oX0"/>
-                        <constraint firstAttribute="height" constant="30" id="Kw9-uF-RlE"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="isAnimating" value="NO"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="hidesWhenStopped" value="NO"/>
-                    </userDefinedRuntimeAttributes>
-                </glkView>
             </subviews>
             <color key="backgroundColor" red="0.28830542570000001" green="1" blue="0.34090738390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="U9w-fM-nx4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="7" id="5kR-nR-8Cu"/>
                 <constraint firstAttribute="bottom" secondItem="x1F-hy-quL" secondAttribute="bottom" id="Bho-kv-cQa"/>
-                <constraint firstAttribute="trailing" secondItem="lvG-Io-jsH" secondAttribute="trailing" id="D27-lS-th2"/>
-                <constraint firstItem="lvG-Io-jsH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Erd-mL-n1Q"/>
+                <constraint firstItem="R2Q-JK-MjG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Boh-59-jdd"/>
                 <constraint firstAttribute="trailing" secondItem="x1F-hy-quL" secondAttribute="trailing" id="HC7-3d-3nc"/>
-                <constraint firstAttribute="bottom" secondItem="lvG-Io-jsH" secondAttribute="bottom" id="ZFj-M1-d2G"/>
-                <constraint firstItem="U9w-fM-nx4" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="dWb-8V-QIO"/>
+                <constraint firstItem="R2Q-JK-MjG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="I87-bg-fhc"/>
+                <constraint firstItem="lvG-Io-jsH" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="V5S-hr-XJq"/>
+                <constraint firstItem="x1F-hy-quL" firstAttribute="leading" secondItem="R2Q-JK-MjG" secondAttribute="trailing" id="b9g-M2-Yfy"/>
                 <constraint firstItem="x1F-hy-quL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="h8K-EB-STW"/>
-                <constraint firstItem="lvG-Io-jsH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="wTC-fQ-whn"/>
+                <constraint firstAttribute="bottom" secondItem="R2Q-JK-MjG" secondAttribute="bottom" id="p8I-P8-JtQ"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <userDefinedRuntimeAttributes>
