--- a/goSellSDK/UI/Resources/Payment.storyboard
+++ b/goSellSDK/UI/Resources/Payment.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -172,7 +173,7 @@
                                                         <constraint firstAttribute="width" constant="1" id="LrR-ub-NnR"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6H4-rV-chJ">
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6H4-rV-chJ">
                                                     <rect key="frame" x="0.0" y="1" width="63" height="63"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="6H4-rV-chJ" secondAttribute="height" id="J7V-h5-edu"/>
@@ -226,6 +227,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="billImageView" destination="6H4-rV-chJ" id="Y5G-Op-eH8"/>
                                             <outlet property="transactionCurrencyLabel" destination="V2d-AB-e4N" id="hkg-ye-YKb"/>
                                             <outlet property="userSelectedCurrencyLabel" destination="EGI-aZ-2Dp" id="p8W-hh-K2J"/>
                                             <segue destination="sHo-Rf-yPg" kind="show" id="ppw-qI-A3A"/>
@@ -442,12 +444,11 @@
                                                                 <outlet property="nextField" destination="8oj-LN-ysY" id="feX-iQ-cpH"/>
                                                             </connections>
                                                         </textField>
-                                                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iu4-UQ-Hrl">
+                                                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iu4-UQ-Hrl">
                                                             <rect key="frame" x="299" y="0.0" width="44" height="44"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="iu4-UQ-Hrl" secondAttribute="height" id="m9c-3X-9aZ"/>
                                                             </constraints>
-                                                            <state key="normal" title="Scan"/>
                                                             <connections>
                                                                 <action selector="cardScannerButtonTouchUpInside:" destination="w9J-dN-6b9" eventType="touchUpInside" id="NSO-hD-f0w"/>
                                                             </connections>
@@ -922,7 +923,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCi-WL-rg8">
                                 <rect key="frame" x="0.0" y="20" width="375" height="66"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e07-h2-OIV" customClass="LoadingImageView" customModule="goSellSDK">
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e07-h2-OIV" customClass="LoadingImageView" customModule="goSellSDK">
                                         <rect key="frame" x="10" y="10" width="46" height="46"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -937,15 +938,14 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Business Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mol-yB-0EV">
                                         <rect key="frame" x="66" y="22" width="243" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pV0-Qv-9ro">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pV0-Qv-9ro">
                                         <rect key="frame" x="319" y="10" width="46" height="46"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="pV0-Qv-9ro" secondAttribute="height" id="xeL-YZ-QMy"/>
                                         </constraints>
-                                        <state key="normal" title="Close"/>
                                         <connections>
                                             <action selector="closeButtonTouchUpInside:" destination="XgQ-HN-1pH" eventType="touchUpInside" id="ML4-HT-Cwu"/>
                                         </connections>
@@ -966,7 +966,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.70980392156862748" green="0.70980392156862748" blue="0.70980392156862748" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="aCi-WL-rg8" firstAttribute="leading" secondItem="36V-Ua-Okv" secondAttribute="leading" id="InQ-nz-cHE"/>
                             <constraint firstAttribute="trailing" secondItem="aCi-WL-rg8" secondAttribute="trailing" id="Uh5-Jv-Eat"/>
